--- a/hubble_constant_mass_correction/pyproject.toml
+++ b/hubble_constant_mass_correction/pyproject.toml
@@ -12,6 +12,7 @@ seaborn = "^0.11.1"
 tqdm = "^4.61.1"
 pymc3 = "^3.11.2"
 ipykernel = "^6.0.0"
+arviz = "^0.11.2"
 
 [tool.poetry.dev-dependencies]
 black = "^21.6b0"
