--- a/hubble_constant_mass_correction/pyproject.toml
+++ b/hubble_constant_mass_correction/pyproject.toml
@@ -13,6 +13,8 @@ tqdm = "^4.61.1"
 pymc3 = "^3.11.2"
 ipykernel = "^6.0.0"
 arviz = "^0.11.2"
+jupyterlab = "^3.0.16"
+corner = "^2.2.1"
 
 [tool.poetry.dev-dependencies]
 black = "^21.6b0"
