--- a/hubble_constant_mass_correction/pyproject.toml
+++ b/hubble_constant_mass_correction/pyproject.toml
@@ -15,6 +15,7 @@ ipykernel = "^6.0.0"
 arviz = "^0.11.2"
 jupyterlab = "^3.0.16"
 corner = "^2.2.1"
+emcee = "^3.1.0"
 
 [tool.poetry.dev-dependencies]
 black = "^21.6b0"
