--- a/hubble_constant_mass_correction/pyproject.toml
+++ b/hubble_constant_mass_correction/pyproject.toml
@@ -18,6 +18,7 @@ corner = "^2.2.1"
 emcee = "^3.1.0"
 ipywidgets = "^7.6.3"
 h5py = "^3.3.0"
+tabulate = "^0.8.9"
 
 [tool.poetry.dev-dependencies]
 black = "^21.6b0"
